--- a/token-contract/Anchor.toml
+++ b/token-contract/Anchor.toml
@@ -5,7 +5,7 @@ seeds = false
 skip-lint = false
 
 [programs.localnet]
-n3_hello_world = "2zz4zSSMVPc291qsiYtDdRDENXqJgmRhzmVX4WEm5Bh6"
+token_contract = "Cs7QvsfAT5QKxCWQ5Nb7pVLG7N2XxLzg3eVjt8csEXrA"
 
 [registry]
 url = "https://api.apr.dev"
